# RJMS

./: .env.example  .gitignore  .replit  .replitrc  QUICK_START.md  README.md  START_HERE.md  design_guidelines.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  run_rjms.sh  server.js  start.sh  start_app.py  start_app.sh  start_services.js  vite.config.js
backend/: requirements.txt  run.py
backend/app/: __init__.py
backend/app/models/: models.py
backend/app/routes/: auth.py  courses.py  reflections.py  students.py  teacher.py
backend/app/services/: ai_feedback.py
backend/app/utils/: auth_utils.py
backend/static/: index.html
backend/static/assets/: index-BAbTMbKr.js  index-CF0Sq6M4.css
client/: index.html
client/src/: index.css
client/src/components/: DeleteDialog.tsx  EmptyState.tsx  QuestionCard.tsx  QuestionEditor.tsx  SearchBar.tsx  ThemeToggle.tsx
client/src/components/examples/: DeleteDialog.tsx  EmptyState.tsx  QuestionCard.tsx  QuestionEditor.tsx  SearchBar.tsx
client/src/pages/: Home.tsx
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/assets/: main.css
frontend/src/router/: index.js
frontend/src/views/: Home.vue  StudentLogin.vue  TeacherLogin.vue
frontend/src/views/student/: ReflectionDetails.vue  StudentCourse.vue  StudentDashboard.vue  StudentHome.vue  (+1 more)
src/assets/: main.css
src/views/: StudentLogin.vue  TeacherLogin.vue
src/views/student/: ReflectionDetails.vue  StudentProfile.vue
src/views/teacher/: CourseOverview.vue  CourseReflections.vue  ManageStudents.vue
(+8 files in other folders)
